Add GNU Octave slide

--- a/index.html
+++ b/index.html
@@ -664,6 +664,23 @@
         </section>
 
         <section>
+          <h2>What is GNU Octave?</h2>
+          <div class="two-column">
+            <div class="column">
+              <img src="/src/images/octave-logo.svg" alt="GNU Octave logo" width="70%">
+            </div>
+            <div class="column" style="width: 60%;">
+              <ul>
+                <li>Scientific programming language</li>
+                <li>Mathematics-oriented syntax</li>
+                <li>Drop-in compatible with MATLAB</li>
+                <li>Free and open-source</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
+        <section>
           <h2>Xeus-Octave-Lite</h2>
           <div class="jlite-iframe">
             <iframe src="https://isabelparedes.github.io/pydata2025-octave/lab/?path=demo.ipynb" width="100%" height="100%" style="border: none;"></iframe>
