--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="column">
               <h2>Python</h2>
               <div style="width: 100%; height: 500px;">
-                <iframe src="https://jupyterlite.github.io/xeus-lite-demo/repl/?kernel=xpython&toolbar=1&code=import this" width="100%" height="500px" style="border: none;"></iframe>
+                <iframe src="https://jupyterlite.github.io/xeus-lite-demo/repl/?kernel=xpython&toolbar=1&code=import%20this" width="100%" height="500px" style="border: none;"></iframe>
               </div>
               <p style="font-size: 0.7em;"><a href="python in the browser" target="_blank">[open in new tab]</a></p>
             </div>
@@ -125,7 +125,7 @@
           <div class="two-column">
             <div class="mermaid">
               <pre>
-              %%{init: {'theme': 'dark', 'themeVariables': { 'darkMode': true }}}%%
+              %%{init: {'theme': 'default', 'themeVariables': { 'darkMode': true }}}%%
               graph LR
                 subgraph MyBox["Jupyter"]
                   
@@ -148,7 +148,7 @@
             </div>
             <div class="mermaid">
               <pre>
-              %%{init: {'theme': 'dark', 'themeVariables': { 'darkMode': true }}}%%
+              %%{init: {'theme': 'default', 'themeVariables': { 'darkMode': false }}}%%
               graph LR
 
               
