Add xeus-octave slide

--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
         <section>
           <h2>Patching LLVM</h2>
           <div class="single-column">
-          <pre><code data-trim data-line-numbers class="language-diff">
+          <pre><code data-trim data-line-numbers class="language-diff"  style="max-height: 500px;">
           From 703b5fa8bd61289c8664ef603da8c502cb595ac7 Mon Sep 17 00:00:00 2001
           From: serge-sans-paille <sguelton@mozilla.com>
           Date: Tue, 8 Jul 2025 17:02:04 +0200
@@ -802,6 +802,27 @@
           </code></pre>
           </div>
           <p>Partial support for common linkage for WebAssembly (<a href="https://github.com/llvm/llvm-project/pull/151478" target="_blank">llvm-project/pull/151478</a>)</p>
+        </section>
+
+        <section>
+          <h2>Xeus-Octave</h2>
+          <div class="two-column">
+            <div class="column">
+              <ul>
+                <li>Authors:</li>
+                <ul>
+                  <li><a href="https://github.com/AntoinePrv" target="_blank">Antoine Prouvost</a></li>
+                  <li><a href="https://github.com/rapgenic" target="_blank">Giulio Girardi</a></li>
+                </ul>
+                <li>Powered by <code>xeus</code></li>
+              </ul>
+              <p></p>
+              <img src="/src/images/xeus-octave-logo.svg" alt="Xeus-Octave logo" width="90%">
+            </div>
+            <div class="column">
+              <img src="/src/images/xeus-octave-lab.png" class="img-shadow" alt="Example Jupyter notebook for Xeus-Octave kernel">
+            </div>
+          </div>
         </section>
 
         <section>
