Add octave packages

--- a/index.html
+++ b/index.html
@@ -833,6 +833,18 @@
           <p style="font-size: 0.5em;"><a href="https://isabelparedes.github.io/pydata2025-octave/lab/?path=demo.ipynb" target="_blank">[open in new tab]</a></p>
         </section>
 
+        <section>
+          <h2>Expanding the GNU Octave Ecosystem</h2>
+          <div class="single-column" style="padding: 3em;">
+            <div style="text-align: left; width: 100%;"><h3>Future plans</h3></div>
+            <ul>
+              <li>Add pure Octave packages to <code>conda-forge</code> as <strong>noarch</strong> packages</li>
+              <li>Add Octave packages to <code>emscripten-forge</code>, those which require compilation</li>
+            </ul>
+            <img src="/src/images/packages.svg" alt="Four cardboard boxes as packages" width="30%">
+          </div>
+        </section>
+
         <section class="cosmo-slide">
           <img src="/src/images/cosmo_fly.png" alt="QuantStack Logo" class="cosmo-img">
           <h2 class="main-title">JupyterLite Terminal</h1>
