Add cross to libcurl

--- a/index.html
+++ b/index.html
@@ -350,8 +350,11 @@
                     <li><code>bzip2</code></li>
                     <li><code>lzma</code></li>
                     <li><code>pcre2</code></li>
+                  </ul>
+                  <ul style="list-style-type: '❌ ';">
                     <li><code>libcurl</code></li>
-                  </ul></ul></div>
+                  </ul>
+                </ul></div>
                 <div style="padding: 1em;"><ul>
                   <li>Optional</li>
                   <ul>
