--- a/index.html
+++ b/index.html
@@ -813,6 +813,13 @@
                 <li>Drop-in compatible with MATLAB</li>
                 <li>Free and open-source</li>
               </ul>
+              <pre><code data-trim class="language-matlab" style="width: 40%; margin-left: 30%;">
+              b = [4; 9; 2]
+              A = [ 3 4 5;
+                    1 3 1;
+                    3 5 9 ]
+              x = A \ b
+              </code></pre>
             </div>
           </div>
         </section>
